add rollback & copy shared to backend
