# src/Api/CopySharedApiInterface.php
@@ -1,0 +1,73 @@
+<?php
+/**
+ * CopySharedApiInterface
+ * PHP version 5
+ *
+ * @category Class
+ * @package  App
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Agnes UI
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace App\Api;
+
+use Symfony\Component\HttpFoundation\File\UploadedFile;
+use App\Model\AcrossInstancesAction;
+use App\Model\CopyShared;
+
+/**
+ * CopySharedApiInterface Interface Doc Comment
+ *
+ * @category Interface
+ * @package  App\Api
+ * @author   OpenAPI Generator team
+ * @link     https://github.com/openapitools/openapi-generator
+ */
+interface CopySharedApiInterface
+{
+
+    /**
+     * Operation copyShared
+     *
+     * Copy the shared data from source to target (replicate source on target).
+     *
+     * @param  App\Model\CopyShared $copyShared  The copy shared action (required)
+     * @param  integer $responseCode     The HTTP response code to return
+     * @param  array   $responseHeaders  Additional HTTP headers to return with the response ()
+     *
+     * @return void
+     *
+     */
+    public function copyShared(CopyShared $copyShared, &$responseCode, array &$responseHeaders);
+
+    /**
+     * Operation copySharedDryRun
+     *
+     * Check which instances the copy shared action would affect
+     *
+     * @param  App\Model\CopyShared $copyShared  The copy shared action to dry run (required)
+     * @param  integer $responseCode     The HTTP response code to return
+     * @param  array   $responseHeaders  Additional HTTP headers to return with the response ()
+     *
+     * @return App\Model\AcrossInstancesAction[]
+     *
+     */
+    public function copySharedDryRun(CopyShared $copyShared, &$responseCode, array &$responseHeaders);
+}
